--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
    "version": 2,
    "routes": [
-      { "src": "/PGv30b-z", "dest": "/index.js" },
-      { "src": "/welcome", "dest": "/index.js" },
-      { "src": "/questions", "dest": "/index.js" },
-      { "src": "/results", "dest": "/index.js" },
-      { "src": "/(.*)", "dest": "/index.js" }
+      { "src": "/PGv30b-z", "destination": "index.js" },
+      { "src": "/welcome", "destination": "index.js" },
+      { "src": "/questions", "destination": "index.js" },
+      { "src": "/results", "destination": "index.js" },
+      { "src": "/(.*)", "destination": "index.js" }
   ]
 }
